Fixed executing methods from JARs, moved stateless actions to a separate project