@@ -5,6 +5,7 @@ import com.google.gson.GsonBuilder;
 import dynamiccalls.Executors.ExecutionRequest;
 import dynamiccalls.Executors.ExecutionResponse;
 import dynamiccalls.Executors.ExecutionServiceGrpc;
+import dynamiccalls.Main;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -14,6 +15,8 @@ import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class ExecutionServiceImpl extends ExecutionServiceGrpc.ExecutionServiceImplBase {
     private static final Logger LOGGER = LogManager.getLogger(ExecutionServiceImpl.class);
@@ -21,6 +24,7 @@ public class ExecutionServiceImpl extends ExecutionServiceGrpc.ExecutionServiceI
             .setDateFormat("dd-MM-yyyy HH:mm")
             .setLenient() // Makes the parser very tolerant, even to allow malformed JSON data
             .create();
+    private static final String EXECUTABLE_JARS_PATH = "../executable_jars/";
 
     private void onError(String message, ExecutionResponse.Builder responseBuilder) {
         LOGGER.error(message);
@@ -31,26 +35,37 @@ public class ExecutionServiceImpl extends ExecutionServiceGrpc.ExecutionServiceI
         return String.format("%s - %s", e.getClass(), e.getMessage());
     }
 
+    private boolean checkIfNoError(ExecutionResponse.Builder responseBuilder) {
+        return responseBuilder.getError().equals("");
+    }
+
     @Nullable
     private URL getJarUrl(String jarLocation, ExecutionResponse.Builder responseBuilder) {
-        jarLocation = "file://" + jarLocation;
         URL jarUrl = null;
-        try {
-            jarUrl = new URL(jarLocation);
-            LOGGER.info("Successfully retrieved the JAR's URL");
-        } catch (MalformedURLException e) {
-            onError(getErrorMessageWithName(e), responseBuilder);
+        // Empty jarLocation means that we want to execute a method from the server's classpath
+        if (!jarLocation.equals("")) {
+            try {
+                Path jarPath = Paths.get(EXECUTABLE_JARS_PATH, jarLocation);
+                jarUrl = jarPath.toUri().toURL();
+                LOGGER.info("Successfully retrieved the JAR's URL: '{}'", jarUrl);
+            } catch (MalformedURLException e) {
+                onError(getErrorMessageWithName(e), responseBuilder);
+            }
         }
         return jarUrl;
     }
 
     @Nullable
-    private Class getClass(URL jarUrl, String className, ExecutionResponse.Builder responseBuilder) {
-        ClassLoader classLoader = ExecutionServiceImpl.class.getClassLoader();
-        URLClassLoader urlClassLoader = new URLClassLoader(new URL[]{jarUrl}, classLoader);
+    private Class getClass(@Nullable URL jarUrl, String className, ExecutionResponse.Builder responseBuilder) {
         Class clazz = null;
         try {
-            clazz = urlClassLoader.loadClass(className);
+            if (jarUrl == null) {
+                clazz = Class.forName(className);
+            } else {
+                ClassLoader classLoader = Main.class.getClassLoader();
+                URLClassLoader childClassLoader = new URLClassLoader(new URL[]{jarUrl}, classLoader);
+                clazz = Class.forName(className, true, childClassLoader);
+            }
             LOGGER.info("Found the class");
         } catch (ClassNotFoundException e) {
             onError("Couldn't find the class", responseBuilder);
@@ -90,6 +105,8 @@ public class ExecutionServiceImpl extends ExecutionServiceGrpc.ExecutionServiceI
             result = method.invoke(object, GSON.fromJson(data, parameterTypes[0]));
         } else if (0 == parameterTypes.length) {
             result = method.invoke(object);
+        } else {
+            onError("Unexpected parameters count", responseBuilder);
         }
         return result;
     }
@@ -99,17 +116,19 @@ public class ExecutionServiceImpl extends ExecutionServiceGrpc.ExecutionServiceI
                         io.grpc.stub.StreamObserver<ExecutionResponse> responseObserver) {
         LOGGER.info("Handling request: '{}'", request);
         ExecutionResponse.Builder responseBuilder = ExecutionResponse.newBuilder();
-
         URL jarUrl = getJarUrl(request.getJarLocation(), responseBuilder);
-        if (null != jarUrl) {
+
+        if (checkIfNoError(responseBuilder)) {
             Class clazz = getClass(jarUrl, request.getClassName(), responseBuilder);
-            if (null != clazz) {
+            if (checkIfNoError(responseBuilder)) {
                 Method method = getMethod(clazz, request.getMethodName(), responseBuilder);
-                if (null != method) {
+                if (checkIfNoError(responseBuilder)) {
                     try {
                         Object executionResult = getExecutionResult(clazz, method, request.getData(), responseBuilder);
-                        responseBuilder.setData(GSON.toJson(executionResult));
-                        LOGGER.info("Result: '{}'", responseBuilder.getData());
+                        if (checkIfNoError(responseBuilder)) {
+                            responseBuilder.setData(GSON.toJson(executionResult));
+                            LOGGER.info("Result: '{}'", responseBuilder.getData());
+                        }
                     } catch (InvocationTargetException e) {
                         onError(getErrorMessageWithName((Exception) e.getTargetException()), responseBuilder);
                     } catch (Exception e) {
